--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,12 +17,13 @@
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
     <!-- this project files -->
     <link href="css/style.css" rel="stylesheet" />
-    <script src="js/ForgeTree.js"></script>
+    <!-- <script src="js/ForgeTree.js"></script> -->
     <script src="js/ForgeViewer.js"></script>
     <script src="js/handleselectionextension.js"></script>
     <script src="js/animatecamera.js"></script>
     <script src="js/markup3dExtension.js"></script>
     <script src="js/objectselection.js"></script>
+    <script src="js/testtree.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
@@ -41,6 +42,8 @@
             </button>
                     </div>
                     <div id="appBuckets">
+                    </div>
+                    <div id="testtree">
                     </div>
                 </div>
             </div>
