--- a/site/index.html
+++ b/site/index.html
@@ -9,11 +9,30 @@
 </head>
 
 <body>
-    <h1 class="project_name">Проект: «ИЭТР оппозитный двигатель на базе платформы Autodesk Forge»</h1>
+    <header class="header">
+        <h1 class="project_name">Проект: «ИЭТР оппозитный двигатель на базе платформы Autodesk Forge»</h1>
+        <nav>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="#targets" class="link">Задачи</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#members" class="link">Участники</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#work-process" class="link">Ход работы</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#links" class="link">Ссылки</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <div class="task">Была поставлена задача - создание Интерактивного Электронного
-            Технического Руководства на базе облачной платформы Autodesk Forge.</div>
-        <div class="targets">Цели работы:
+        <div class="task">Цель проекта: разработка Интерактивного Электронного Технического Руководства «Оппозитный
+            двигатель» на базе облачной платформы Autodesk Forge.</div>
+        <div class="targets">
+            <h3 id="targets">Задачи работы:</h3>
             <ul>
                 <li>ознакомиться с возможностями Autodesk Forge;</li>
                 <li>изучить основные составляющие Forge Viewer;</li>
@@ -21,7 +40,7 @@
                 <li>применить полученные знания и навыки в создании ИЭТР "Оппозитный двигатель".</li>
             </ul>
         </div>
-        <div class="team">
+        <div class="team" id="members">
             <h3>Участники:</h3>
             <h5 class="group">Группа 181-326</h5>
             <ul class="members">
@@ -36,9 +55,9 @@
                 <p class="headtext">Журавлев М.С.:</p>
                 <p class="maintext">
                 <ol class="respons">
-                    <li>Разработка основых скриптов;</li>
-                    <li>Создание расширения аннотаций;</li>
-                    <li>Разработка БД для сохранения и удаления аннотаций;</li>
+                    <li>Разработка основных скриптов.</li>
+                    <li>Создание расширения аннотаций.</li>
+                    <li>Разработка БД для сохранения и удаления аннотаций.</li>
                     <li>Создание анимаций в Autodesk Fusion.</li>
                 </ol>
                 </p>
@@ -47,10 +66,10 @@
                 <p class="headtext">Хамидех Н.Х.:</p>
                 <p class="maintext">
                 <ol class="respons">
-                    <li>Разработка основых скриптов;</li>
-                    <li>Создание расширения аннотаций;</li>
-                    <li>Составление нового древа сайта;</li>
-                    <li>Подключение БД к проекту;</li>
+                    <li>Разработка основных скриптов.</li>
+                    <li>Создание расширения аннотаций.</li>
+                    <li>Составление нового древа для сайта.</li>
+                    <li>Подключение БД к проекту.</li>
                     <li>Подключение анимации во Viewer через API Fusion.</li>
                 </ol>
                 </p>
@@ -59,10 +78,10 @@
                 <p class="headtext">Хрусталев Г.Н.:</p>
                 <p class="maintext">
                 <ol class="respons">
-                    <li>Разработка основых скриптов;</li>
-                    <li>Составление текстового блока с содержательной частью ИЭТР'а;</li>
-                    <li>Работа с БД;</li>
-                    <li>Создание анимаций в Autodesk Fusion;</li>
+                    <li>Разработка основных скриптов.</li>
+                    <li>Работа с БД.</li>
+                    <li>Создание анимаций в Autodesk Fusion.</li>
+                    <li>Составление текстового блока с содержательной частью ИЭТР.</li>
                     <li>Документация, распределение ролей, отчетность, поиск информации для проекта.</li>
                 </ol>
                 </p>
@@ -71,52 +90,63 @@
                 <p class="headtext">Шик И.А.:</p>
                 <p class="maintext">
                 <ol class="respons">
-                    <li>Создание нового дизайна сайта;</li>
-                    <li>Составление текстового блока с содержательной частью ИЭТР'а;</li>
-                    <li>Верстка сайта;</li>
-                    <li>Работа с БД;</li>
-                    <li>Создание анимаций в Autodesk Fusion;</li>
+                    <li>Создание нового дизайна сайта.</li>
+                    <li>Верстка сайта.</li>
+                    <li>Составление текстового блока с содержательной частью ИЭТР.</li>
+                    <li>Заполнение БД информацией.</li>
+                    <li>Создание анимаций в Autodesk Fusion.</li>
                     <li>Документация.</li>
                 </ol>
                 </p>
             </div>
         </div>
-        <div class="work">
+        <div class="work" id="work-process">
             <h3>Ход работы</h3>
             <p>
-                На конец марта 2020 года проект представляет собой готовый Viewer для просмотра моделей, 
+                На конец марта 2020 года проект представляет собой готовый Viewer для просмотра моделей,
                 с подключенным расширением добавления и удаления аннотаций (без БД). Ведется работа по созданию
-                нового макета сайта. Идёт поиск информации, связанной с двигателями, их обслуживанием и траспортировкой. 
+                нового макета сайта. Идёт поиск информации, связанной с двигателями, их обслуживанием и траспортировкой.
                 Реализуется нового древо, текстовый блок и его содержательная часть.
             </p>
             <p>
-                29 марта были исправлены ошибки в скрипте аннотаций, а также реализована функция для изменения видимости аннотаций, 
-                находящейся за моделью. Кроме того, был создан прототип дизайна сайта и была начата работа по его верстке.
+                29 марта были исправлены ошибки в скрипте аннотаций, а также реализована функция для изменения видимости
+                аннотаций,
+                находящейся за моделью. Кроме того, был создан прототип дизайна сайта и была начата работа по его
+                верстке.
             </p>
             <div class="img"><img src="./img/maket-prototip.jpg" alt="макет" width="80%" height="80%"></div>
             <p>
-                На 5 апреля 2020 года: изменен дизайн сайта, доработано древо элементов ("Компоненты" получают все детали из модели), 
-                а также проект был загружен на хостинг <a href="https://heroku.com/">Heroku</a>.
+                На 5 апреля 2020 года: изменен дизайн сайта, доработано древо элементов ("Компоненты" получают все
+                детали из модели),
+                а также проект был загружен на хостинг <a href="https://heroku.com/" class="link">Heroku</a>.
             </p>
             <div class="img"><img src="./img/new_design.png" alt="новый дизайн" width="80%" height="80%"></div>
             <p>
-                На 12 апреля 2020 года: добавлено изолирование элементов через древо компонентов, было начато изучение СУБД MongoDB. 
-                Также была создана тестовая база данных для текстовой информации компонентов и загрузки компонентов в древо.
+                На 12 апреля 2020 года: добавлено изолирование элементов через древо компонентов, было начато изучение
+                СУБД MongoDB.
+                Также была создана тестовая база данных для текстовой информации компонентов и загрузки компонентов в
+                древо.
             </p>
             <p>
-                На 19 апреля 2020 года: доработана база данных с компонентами модели двигателя и текстовой информацией к каждому из них. 
-                Также был подключен плагин <a href="https://fancyapps.com/fancybox/3/">FancyBox 3</a> для просмотра удобного картинок в
-                информационной панели. Продолжается работа с добавлением интерактивной информации для каждого компонента двигателя.
+                На 19 апреля 2020 года: доработана база данных с компонентами модели двигателя и текстовой информацией к
+                каждому из них.
+                Также был подключен плагин <a href="https://fancyapps.com/fancybox/3/" class="link">FancyBox 3</a> для
+                просмотра
+                удобного картинок в
+                информационной панели. Продолжается работа с добавлением интерактивной информации для каждого компонента
+                двигателя.
             </p>
             <div class="img"><img src="./img/fancybox.png" alt="fancybox" width="80%" height="80%"></div>
             <p>
-                На 26 апреля 2020 года: практически доработана информационная панель для компонентов (база данных), 
-                всё древо было добавлено в базу данных. Началась работа по созданию и подключению анимаций из Autodesk Fusion360.
+                На 26 апреля 2020 года: практически доработана информационная панель для компонентов (база данных),
+                всё древо было добавлено в базу данных. Началась работа по созданию и подключению анимаций из Autodesk
+                Fusion360.
             </p>
             <p>
                 На 3 мая 2020 года: доработана база данных для компонентов, добавлена текстовая информация для элементов
-                древа. Удалось подключить тестовую анимацию из Fusion360 ко Viewer. Реализовано переключение моделей 
-                (с анимациями и базовой) при нажатии на определенный элемент древа. Продолжается работа по созданию анимаций в Fusion360.
+                древа. Удалось подключить тестовую анимацию из Fusion360 ко Viewer. Реализовано переключение моделей
+                (с анимациями и базовой) при нажатии на определенный элемент древа. Продолжается работа по созданию
+                анимаций в Fusion360.
             </p>
             <p>
                 На 10 мая 2020 года: реализовано добавление и удаление аннотаций с помощью базы данных. Была изменена
@@ -135,12 +165,16 @@
                 презентации и видеоролика для защиты проекта.
             </p>
         </div>
-        <div class="links">
+        <div class="links" id="links">
             <h3>Ссылки, связанные с проектом:</h3>
-            <p><a href="https://ietm-forge.herokuapp.com/">Ссылка на основной сайт</a></p>
-            <p><a href="https://trello.com/b/uQkFcJx5/forge-иэтр-оппозитный-двигатель">Ссылка на Trello проекта</a></p>
-            <p><a href="https://github.com/JoshTD/PA-Forge-2020-2">Ссылка на git-репозиторий всего проекта</a></p>
-            <p><a href="https://github.com/Jastot/IETR_Forge_second_class">Ссылка на git-репозиторий ИЭТР "Оппозитный двигатель"</a></p>
+            <p><a href="https://ietm-forge.herokuapp.com/" class="link">Ссылка на основной сайт</a></p>
+            <p><a href="https://trello.com/b/uQkFcJx5/forge-иэтр-оппозитный-двигатель" class="link">Ссылка на Trello
+                    проекта</a></p>
+            <p><a href="https://github.com/JoshTD/PA-Forge-2020-2" class="link">Ссылка на git-репозиторий всего
+                    проекта</a></p>
+            <p><a href="https://github.com/Jastot/IETR_Forge_second_class" class="link">Ссылка на git-репозиторий ИЭТР
+                    "Оппозитный
+                    двигатель"</a></p>
         </div>
     </main>
     <footer>
