--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,14 +6,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
-    <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/learn.forge.viewmodels/raw/master/img/favicon.ico">
+    <link rel="shortcut icon"
+        href="https://github.com/Autodesk-Forge/learn.forge.viewmodels/raw/master/img/favicon.ico">
     <!-- Common packages: jQuery, Bootstrap, jsTree -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
@@ -21,10 +29,12 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css" />
     <!-- Autodesk Forge Viewer files -->
-    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
+    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css"
+        type="text/css">
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
     <!-- this project files -->
     <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/media.css">
     <!-- <script src="js/ForgeTree.js"></script> -->
     <script src="js/ForgeViewer.js"></script>
     <script src="js/handleselectionextension.js"></script>
@@ -50,8 +60,6 @@
 </head>
 
 <body>
-
-
     <div id="cube-loader">
         <div class="caption">
             <div class="cube-loader">
@@ -68,6 +76,9 @@
             <div class="logo">
                 <a href="https://forge.autodesk.com/"><img src="./img/forge.png" alt="logo"></a>
             </div>
+            <div class="small-logo">
+                <a href="https://forge.autodesk.com/"><img src="./img/small-logo.png" alt="logo"></a>
+            </div>
             <div class="title">
                 ИЭТР Оппозитный двигатель
             </div>
@@ -75,15 +86,13 @@
     </nav>
     <div class="container-fluid fill main">
         <div class="row fill">
-            <div class="col-sm-2 col-md-2 fill tree transition-width" id="tree">
+            <div class="col-sm-4 col-md-2 fill tree transition-width" id="tree">
                 <div class="panel panel-default fill">
                     <div id="compTree">
                     </div>
-                    <div id="appBuckets">
-                    </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-6 fill viewer transition-width">
+            <div class="col-sm-8 col-md-6 fill viewer transition-width">
                 <div id="forgeViewer">
                 </div>
             </div>
@@ -92,7 +101,7 @@
         </div>
     </div>
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $().fancybox({
                 selector: '[data-fancybox="images"]',
                 buttons: [
@@ -101,10 +110,6 @@
             });
         });
     </script>
-
-    <!-- <form id="uploadFile" method='post' enctype="multipart/form-data">
-        <input id="hiddenUploadField" type="file" name="theFile" style="visibility:hidden" />
-    </form> -->
 
 </body>
 
