Ver. 10 - site fixes

--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,9 @@
                     <a href="#members" class="link">Участники</a>
                 </li>
                 <li class="menu-item">
+                    <a href="#stages" class="link">Этапы разработки</a>
+                </li>
+                <li class="menu-item">
                     <a href="#work-process" class="link">Ход работы</a>
                 </li>
                 <li class="menu-item">
@@ -34,10 +37,13 @@
         <div class="targets">
             <h3 id="targets">Задачи работы:</h3>
             <ul>
-                <li>ознакомиться с возможностями Autodesk Forge;</li>
-                <li>изучить основные составляющие Forge Viewer;</li>
-                <li>научиться пользоваться доступным инструментарием;</li>
-                <li>применить полученные знания и навыки в создании ИЭТР "Оппозитный двигатель".</li>
+                <li>поиск информации по оппозитному двигателю и его обслуживанию;</li>
+                <li>ознакомление с новыми возможностями Autodesk Forge;</li>
+                <li>разработка нового дизайна сайта;</li>
+                <li>создание и подключение базы данных;</li>
+                <li>создание и подключение анимаций Fusion 360;</li>
+                <li>доработка веб-приложения с использованием базы данных (древо, информационный блок);</li>
+                <li>доработка расширения аннотаций.</li>
             </ul>
         </div>
         <div class="team" id="members">
@@ -48,6 +54,18 @@
                 <li>Хамидех Незар Хайтамович</li>
                 <li>Хрусталев Георгий Николаевич</li>
                 <li>Шик Илья Александрович</li>
+            </ul>
+        </div>
+        <div class="stages">
+            <h3 id="stages">Этапы разработки:</h3>
+            <ul>
+                <li>проектирование приложения;</li>
+                <li>доработка плагина аннотаций;</li>
+                <li>создание нового макета и верстка сайта;</li>
+                <li>выбор субд, освоение базы данных и интеграция его в проект;</li>
+                <li>создание коллекций БД для древа управления и хранения аннотаций;</li>
+                <li>изменение древа элементов для использования БД;</li>
+                <li>создание анимаций в Fusion 360 и их подключение к Forge Viewer через Fusion API.</li>
             </ul>
         </div>
         <div class="duties">
@@ -118,7 +136,8 @@
             <p>
                 На 5 апреля 2020 года: изменен дизайн сайта, доработано древо элементов ("Компоненты" получают все
                 детали из модели),
-                а также проект был загружен на хостинг <a href="https://heroku.com/" class="link">Heroku</a>.
+                а также проект был загружен на хостинг <a href="https://heroku.com/" class="link"
+                    target="_blank">Heroku</a>.
             </p>
             <div class="img"><img src="./img/new_design.png" alt="новый дизайн" width="80%" height="80%"></div>
             <p>
@@ -130,7 +149,8 @@
             <p>
                 На 19 апреля 2020 года: доработана база данных с компонентами модели двигателя и текстовой информацией к
                 каждому из них.
-                Также был подключен плагин <a href="https://fancyapps.com/fancybox/3/" class="link">FancyBox 3</a> для
+                Также был подключен плагин <a href="https://fancyapps.com/fancybox/3/" class="link"
+                    target="_blank">FancyBox 3</a> для
                 просмотра
                 удобного картинок в
                 информационной панели. Продолжается работа с добавлением интерактивной информации для каждого компонента
@@ -167,12 +187,15 @@
         </div>
         <div class="links" id="links">
             <h3>Ссылки, связанные с проектом:</h3>
-            <p><a href="https://ietm-forge.herokuapp.com/" class="link">Ссылка на основной сайт</a></p>
-            <p><a href="https://trello.com/b/uQkFcJx5/forge-иэтр-оппозитный-двигатель" class="link">Ссылка на Trello
+            <p><a href="https://ietm-forge.herokuapp.com/" class="link" target="_blank">Ссылка на основной сайт</a></p>
+            <p><a href="https://trello.com/b/uQkFcJx5/forge-иэтр-оппозитный-двигатель" class="link"
+                    target="_blank">Ссылка на Trello
                     проекта</a></p>
-            <p><a href="https://github.com/JoshTD/PA-Forge-2020-2" class="link">Ссылка на git-репозиторий всего
+            <p><a href="https://github.com/JoshTD/PA-Forge-2020-2" class="link" target="_blank">Ссылка на
+                    git-репозиторий всего
                     проекта</a></p>
-            <p><a href="https://github.com/Jastot/IETR_Forge_second_class" class="link">Ссылка на git-репозиторий ИЭТР
+            <p><a href="https://github.com/Jastot/IETR_Forge_second_class" class="link" target="_blank">Ссылка на
+                    git-репозиторий ИЭТР
                     "Оппозитный
                     двигатель"</a></p>
         </div>
