Ver. 11 - site + report fixes

--- a/site/index.html
+++ b/site/index.html
@@ -96,11 +96,11 @@
                 <p class="headtext">Хрусталев Г.Н.:</p>
                 <p class="maintext">
                 <ol class="respons">
-                    <li>Разработка основных скриптов.</li>
-                    <li>Работа с БД.</li>
+                    <li>Менеджмент проекта.</li>
+                    <li>Работа с БД и поиск информации для проекта.</li>
                     <li>Создание анимаций в Autodesk Fusion.</li>
                     <li>Составление текстового блока с содержательной частью ИЭТР.</li>
-                    <li>Документация, распределение ролей, отчетность, поиск информации для проекта.</li>
+                    <li>Документация, отчетность.</li>
                 </ol>
                 </p>
             </div>
